--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/_GridViewPartial_CambioProducto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/_GridViewPartial_CambioProducto.cshtml
@@ -97,7 +97,7 @@
         });
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(20);
         settings.Columns.Add("bo_Descripcion", "Bodega").Width = Unit.Percentage(20);
-        settings.Columns.Add("cr_observacion", "Observación").Width = Unit.Percentage(30);
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
             column.FieldName = "Estado";
