--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/_GridViewPartial_importacion_novedades_det.cshtml
@@ -34,46 +34,15 @@
         settings.SettingsExport.EnableClientSideExportAPI = true;
         settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
         //Evento para pintar de rojo las filas anuladas
-        settings.HtmlRowPrepared = (s, e) =>
-        {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
-            {
-                e.Row.ForeColor = System.Drawing.Color.Red;
-            }
-        };
-        settings.Columns.Add(c =>
-        {
-            c.Caption = "#";
-            c.SetDataItemTemplateContent(tc =>
-            {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(tc.DataItem, "IdNovedad") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(tc.DataItem, "IdNovedad") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
-            });
-           
-            c.Settings.AllowDragDrop = DefaultBoolean.False;
-            c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(120);
-        });
-
-        settings.Columns.Add("IdNovedad","ID").Width=Unit.Percentage(5);
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Fecha";
-            column.Caption = "Fecha";
-            column.Width = Unit.Percentage(8);
-            column.PropertiesEdit.DisplayFormatString = "d";
-
-        });
        
-        settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(8);
-        settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(22);
        
+        settings.Columns.Add("Secuancia","ID").Width=Unit.Percentage(5);
+       
+
+        settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(10);
+        settings.Columns.Add("pe_apellido","Empleado").Width = Unit.Percentage(30);
+        settings.Columns.Add("Valor", "Valor").Width = Unit.Percentage(15);
+
     });
 }
 @grid.Bind(Model.detalle).GetHtml()
