--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Anular.cshtml
@@ -82,104 +82,114 @@
     @Html.HiddenFor(q => q.IdCbteCble_Nota)
     @Html.HiddenFor(q => q.IdTipoCbte_Nota)
 
-<div class="row">
-    <div class="col-md-6">
-        <div class="col-md-12">
-            <div class="form-group">
-                <label for="IdSucursal">Sucursal*</label>
-                @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
-                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="col-md-12">
-            <div class="form-group">
-                <label for="IdProveedor">Proveedor*</label>
-                @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
-                @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
+    <div class="row">
         <div class="col-md-6">
-            <div class="form-group">
-                <label for="IdOrden_giro_Tipo">Tipo nota*</label>
-                @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "Key", "Value"), new { @class = "form-control", @id = "IdTipoNota" })
-                @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="cn_fecha">Fecha documentos*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
-                    </div>
-                    @Html.TextBoxFor(q => q.cn_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "cn_fecha" })
-                    @Html.ValidationMessageFor(q => q.cn_fecha, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="Fecha_contable">Fecha contabilización*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
-                    </div>
-                    @Html.TextBoxFor(q => q.Fecha_contable, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_contable" })
-                    @Html.ValidationMessageFor(q => q.Fecha_contable, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="cn_Fecha_vcto">Fecha vencimiento*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
-                    </div>
-                    @Html.DevExpress().DateEditFor(q=> q.cn_Fecha_vcto, settings =>
-                {
-                    settings.Name = "cn_Fecha_vcto";
-                    settings.Properties.UseMaskBehavior = true;
-                    settings.Properties.EditFormat = EditFormat.Date;
-                    settings.Properties.EditFormatString = "dd/MM/yyyy";
-                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                }).GetHtml()
-                    @Html.ValidationMessageFor(q => q.cn_Fecha_vcto, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-    <div class="row" id="div_tipo">
-        <div class="col-md-12">
-            <div class="col-md-2">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label for="co_serie">Serie*</label>
-                    @Html.TextBoxFor(q => q.cn_serie1, new { @class = "form-control", @id = "cn_serie1" })
-                    @Html.ValidationMessageFor(q => q.cn_serie2, "", new { @class = "text-danger" })
+                    <label for="IdSucursal">Sucursal*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdOrden_giro_Tipo">Tipo nota*</label>
+                    @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "Key", "Value"), new { @class = "form-control", @id = "IdTipoNota" })
+                    @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="cn_fecha">Fecha documentos*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.TextBoxFor(q => q.cn_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "cn_fecha" })
+                        @Html.ValidationMessageFor(q => q.cn_fecha, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="Fecha_contable">Fecha contabilización*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.TextBoxFor(q => q.Fecha_contable, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_contable" })
+                        @Html.ValidationMessageFor(q => q.Fecha_contable, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="cn_Fecha_vcto">Fecha vencimiento*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.DevExpress().DateEditFor(q=> q.cn_Fecha_vcto, settings =>
+                    {
+                        settings.Name = "cn_Fecha_vcto";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.cn_Fecha_vcto, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-11">
+                <div class="form-group">
+                    <label for="IdProveedor">Proveedor*</label>
+                    @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
+                    @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="col-md-2">
+            <div class="col-md-1">
                 <div class="form-group">
-                    <label for="cn_Nota">Número documento*</label>
-                    @Html.TextBoxFor(q => q.cn_Nota, new { @class = "form-control", @id = "cn_Nota" })
-                    @Html.ValidationMessageFor(q => q.cn_Nota, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-8">
-                <div class="form-group">
-                    <label for="cn_Nota">Número autorización*</label>
-                    @Html.TextBoxFor(q => q.cn_Autorizacion, new { @class = "form-control", @id = "cn_Autorizacion" })
-                    @Html.ValidationMessageFor(q => q.cn_Autorizacion, "", new { @class = "text-danger" })
+                    <label for=""></label>
+                    <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Proveedor",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
                 </div>
             </div>
         </div>
+        <div class="row" id="div_tipo">
+            <div class="col-md-6">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="co_serie">Serie*</label>
+                        @Html.TextBoxFor(q => q.cn_serie1, new { @class = "form-control", @id = "cn_serie1" })
+                        @Html.ValidationMessageFor(q => q.cn_serie2, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="cn_Nota">Número documento*</label>
+                        @Html.TextBoxFor(q => q.cn_Nota, new { @class = "form-control", @id = "cn_Nota" })
+                        @Html.ValidationMessageFor(q => q.cn_Nota, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="cn_Nota">Número autorización*</label>
+                        @Html.TextBoxFor(q => q.cn_Autorizacion, new { @class = "form-control", @id = "cn_Autorizacion" })
+                        @Html.ValidationMessageFor(q => q.cn_Autorizacion, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div class="row">
@@ -270,7 +280,7 @@
                                 <label for="IdOrden_giro_Tipo">Sustento tributario*</label>
                                 @Html.DropDownListFor(q => q.IdIden_credito, new SelectList(ViewBag.lst_codigos_sri, "IdCodigo_SRI", "co_descripcion"), new { @class = "form-control", @id = "cmb_idtCredito" })
                                 @Html.ValidationMessageFor(q => q.IdIden_credito, "", new { @class = "text-danger" })
-                </div>
+                            </div>
                         </div>
                         <div class="col-md-2">
                             <div class="form-group">
