--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_GridViewPartial_consignacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/_GridViewPartial_consignacion.cshtml
@@ -83,11 +83,17 @@
             c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdConsignacion", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("NombreProveedor", "Proveedor").Width = System.Web.UI.WebControls.Unit.Percentage(15);
+        settings.Columns.Add("IdConsignacion", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(5);
+        settings.Columns.Add("NombreProveedor", "Proveedor").Width = System.Web.UI.WebControls.Unit.Percentage(35);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("Fecha", "Fecha").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("Observacion", "Observación").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Fecha";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        });
+        settings.Columns.Add("Observacion", "Observación").Width = System.Web.UI.WebControls.Unit.Percentage(30);
 
         settings.Columns.Add(column =>
         {
