--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Index.cshtml
@@ -66,7 +66,7 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEditFor(q => q.fecha, settings =>
+                                @Html.DevExpress().DateEditFor(q => q.fecha_fin, settings =>
                            {
                                settings.Name = "fecha_fin";
                                settings.Properties.UseMaskBehavior = true;
