--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Nuevo.cshtml
@@ -9,12 +9,96 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 
+<script>
+    var selectedIDs;
+    function OnBeginCallback(s, e) {
+        e.customArgs["selectedIDs"] = selectedIDs;
+    }
+
+    function OnSelectionChanged(s, e) {
+        s.GetSelectedFieldValues("IdSecuencial", GetSelectedFieldValuesCallback);
+    }
+    function GetSelectedFieldValuesCallback(values) {
+        //Capture all selected keys
+        selectedIDs = values.join(',');
+    }
+</script>
 @using (Html.BeginForm("Nuevo", "CambioProducto", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     @Html.HiddenFor(q => q.IdUsuario)
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdCambio)
+
+
+    <div class="modal fade" id="ModalFacturas" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Facturas</h4>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="">Desde*</label>
+                                    <div class="input-group date">
+                                        <div class="input-group-addon">
+                                            <i class="fa fa-calendar"></i>
+                                        </div>
+                                        @Html.DevExpress().DateEditFor(q => q.FechaIni, settings =>
+                                           {
+                                               settings.Name = "FechaIni";
+                                               settings.Properties.UseMaskBehavior = true;
+                                               settings.Properties.EditFormat = EditFormat.Date;
+                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           }).GetHtml()
+                                        @Html.ValidationMessageFor(q => q.FechaIni, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-offset-1 col-md-4">
+                                <div class="form-group">
+                                    <label for="">Hasta*</label>
+                                    <div class="input-group date">
+                                        <div class="input-group-addon">
+                                            <i class="fa fa-calendar"></i>
+                                        </div>
+                                        @Html.DevExpress().DateEditFor(q => q.FechaFin, settings =>
+                                           {
+                                               settings.Name = "FechaFin";
+                                               settings.Properties.UseMaskBehavior = true;
+                                               settings.Properties.EditFormat = EditFormat.Date;
+                                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                           }).GetHtml()
+                                        @Html.ValidationMessageFor(q => q.FechaFin, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <label for=""> </label>
+                                    <button type="button" class="btn btn-primary form-control" onclick="BuscarFacturas();">Buscar</button>
+                                </div>                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_CambioProductoDetFacturas")
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="AddFacturas();">Aceptar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-md-12">
@@ -32,7 +116,22 @@
                     @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-4 col-md-2">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="IdProforma"></label>
+                    @Html.TextBoxFor(q => q.NumeroFactura, new { @class = "form-control", @id = "NumeroFactura", @placeholder = "# Factura" })
+                    @Html.ValidationMessageFor(q => q.NumeroFactura, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <label for=""> </label>
+                    <button type="button" class="btn btn-primary form-control" id="btn_buscar" onclick="MostrarModalFacturas();">
+                        <i class="fa fa-search"></i> Facturas
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-offset-1 col-md-2">
                 <div class="form-group">
                     <label for="">Fecha</label>
                     <div class="input-group date">
@@ -62,27 +161,15 @@
                     <label for="Observacion">Observación</label>
                     @Html.TextAreaFor(q => q.Observacion, new { @class = "form-control", @rows = 3 })
                     @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
-                </div>
+                </div>  
             </div>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-6">
-            <div class="col-md-5">
-                <div class="form-group">
-                    <label for="IdProforma"></label>
-                    @Html.TextBoxFor(q => q.NumeroFactura, new { @class = "form-control", @id = "NumeroFactura", @placeholder = "# Factura" })
-                    @Html.ValidationMessageFor(q => q.NumeroFactura, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for=""></label>
-                    <button type="button" class="btn btn-primary" id="btn_buscar" onclick="MostrarModalFacturas();">
-                        <i class="fa fa-search"></i> Facturas
-                    </button>
-                </div>
+        <div class="col-md-12">
+            <div class="col-md-12">
+                @Html.Action("GridViewPartial_CambioProductoDet")
             </div>
         </div>
     </div>
@@ -132,64 +219,68 @@
         });
     };
 
-    function MostrarModalProformas() {        
+    function MostrarModalFacturas() {
+        BuscarFacturas();
+        $("#ModalFacturas").modal("show");
+    };
 
+    function BuscarFacturas() {
         var NumeroFactura = $("#NumeroFactura").val();
 
-        if (NumeroFactura != null && NumeroFactura != 0 && NumeroFactura != "") {            
-            var datos = {
-                IdEmpresa: $("#IdEmpresa").val(),
-                IdSucursal: $("#IdSucursal").val(),
-                IdBodega: $("#IdBodega").val(),
-                NumeroFactura: $("#NumeroFactura").val(),
-                IdTransaccionSession: $("#IdTransaccionSession").val()
-            }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("GetFacturasCambio", "CambioProducto", new { Area = "Facturacion" })',
-                async: false,
-                bDeferRender: true,
-                bProcessing: true,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    if (data == false) {
-                        alert('No existe datos para el número de factura ' + NumeroFactura + ' ingresado');
-                    }
-                },
-                error: function (error) {
-                }
-            });
-            GridView_CambioProductoDet.PerformCallback()
-            $("#NumeroFactura").val("");
+        var datos = {
+            FechaIni: FechaIni.GetValue(),
+            FechaFin: FechaFin.GetValue(),
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val(),
+            IdBodega: $("#IdBodega").val(),
+            NumeroFactura: $("#NumeroFactura").val(),
         }
-        else
-        {
-            var datos = {
-                IdEmpresa: $("#IdEmpresa").val(),
-                IdSucursal: $("#IdSucursal").val(),
-                IdBodega: $("#IdBodega").val(),
-                IdTransaccionSession: $("#IdTransaccionSession").val()
-            }
-            $.ajax({
+        $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("GetListaFacturasCambio", "CambioProducto", new { Area = "Facturacion" })',
+            url: '@Url.Action("GetFacturasCambio", "CambioProducto", new { Area = "Facturacion" })',
             async: false,
             bDeferRender: true,
             bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-
+                if (data == false) {
+                    alert("No existen resultados para los filtros aplicados");
+                }
             },
             error: function (error) {
             }
-            });
-            GridView_PFactura_det.PerformCallback();
-                $("#ModalFacturas").modal("show");
+        });
+        GridView_CambioProductoDetFacturas.UnselectRows();
+        GridView_CambioProductoDetFacturas.PerformCallback();
+        $("#NumeroFactura").val("");
+    }
+
+    function AddFacturas() {
+        var datos = {
+            IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("EditingAddNew", "CambioProducto",new { Area = "Facturacion"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
             }
-    };
+        });
+        selectedIDs = "";
+        GridView_CambioProductoDetFacturas.PerformCallback();
+        GridView_CambioProductoDetFacturas.UnselectRows();
+        GridView_CambioProductoDet.PerformCallback();
+        $("#ModalFacturas").modal("hide");
+    }
 
 </script>
