--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/_GridViewPartial_CambioProductoDetFacturas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/_GridViewPartial_CambioProductoDetFacturas.cshtml
@@ -2,9 +2,9 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridView_PFactura_det";
-        settings.CallbackRouteValues = new { Controller = "Factura", Action = "GridViewPartial_PFactura_det", Area = "Facturacion"};
-        settings.KeyFieldName = "secuencial";
+        settings.Name = "GridView_CambioProductoDetFacturas";
+        settings.CallbackRouteValues = new { Controller = "CambioProducto", Action = "GridViewPartial_CambioProductoDetFacturas", Area = "Facturacion"};
+        settings.KeyFieldName = "IdSecuencia";
 
         settings.Width = Unit.Percentage(100);
 
@@ -12,6 +12,7 @@
         settings.Settings.ShowGroupPanel = false;
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -35,65 +36,38 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdProforma";
-            column.Caption = "# Proforma";
-            column.Width = Unit.Percentage(8);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pr_descripcion";
-            column.Caption = "Producto";
+            column.FieldName = "NombreCliente";
+            column.Caption = "Cliente";
             column.Width = Unit.Percentage(30);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_cantidad";
+            column.FieldName = "vt_NumFactura";
+            column.Caption = "# Factura";
+            column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "vt_fecha";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = Unit.Percentage(10);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pr_descripcionCambio";
+            column.Caption = "Producto";
+            column.Width = Unit.Percentage(25);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "CantidadFact";
             column.Caption = "cantidad";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(8);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_Precio";
-            column.Caption = "Precio";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(8);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_PorDescUnitario";
-            column.Caption = "% Desc. uni.";
-            column.Width = Unit.Percentage(8);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_PrecioFinal";
-            column.Caption = "Precio final";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(8);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_Subtotal";
-            column.Caption = "Subtotal";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(8);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_iva";
-            column.Caption = "I.V.A.";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(8);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_total";
-            column.Caption = "Total";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(8);
+            column.Width = Unit.Percentage(10);
         });
 
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
