--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametroInventario/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ParametroInventario/Index.cshtml
@@ -145,6 +145,8 @@
                         <div class="col-md-2">
                             <div class="form-group">
                                 <div class="checkbox">
+                                    <label for="P_se_crea_lote_0_al_crear_producto_matriz">@Html.CheckBoxFor(q => q.P_se_crea_lote_0_al_crear_producto_matriz) Se crea lote 0 al crear producto matriz</label>
+
                                 </div>
                             </div>
                         </div>
