--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Index.cshtml
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_consignacion", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_consignacion", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
