--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/_GridViewPartial_CambioProductoDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/_GridViewPartial_CambioProductoDet.cshtml
@@ -27,7 +27,7 @@
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
-        
+
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
@@ -35,26 +35,37 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        //Funcion para inicializar fila al presionar nuevo
-        settings.InitNewRow = (s, e) =>
-        {
-            e.NewValues["IdProducto"] = 0;
-            e.NewValues["IdCod_Impuesto_Iva"] = "IVA0";
-            e.NewValues["vt_cantidad"] = "1";
-            e.NewValues["vt_Precio"] = "";
-            e.NewValues["vt_PorDescUnitario"] = "0";
-        };
         settings.Columns.Add(column =>
         {
-            column.FieldName = "pr_descripcion";
-            column.Caption = "Producto";
+            column.FieldName = "NombreCliente";
+            column.Caption = "Cliente";
             column.Width = Unit.Percentage(30);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
-
         settings.Columns.Add(column =>
         {
-            column.FieldName = "IdProducto";
+            column.FieldName = "vt_NumFactura";
+            column.Caption = "Factura";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pr_descripcionFact";
+            column.Caption = "Producto";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pr_descripcionCambio";
+            column.Caption = "Producto";
+            column.Width = Unit.Percentage(20);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdProductoCambio";
             column.Caption = "Producto";
             column.Width = Unit.Percentage(30);
             column.Visible = false;
@@ -62,14 +73,25 @@
             column.SetEditItemTemplateContent(c =>
             {
                 ViewContext.Writer.Write("<div id='ajaxDiv'>");
-                Html.RenderPartial("_CmbProducto_Factura", DataBinder.Eval(c.DataItem, "IdProducto"));
+                Html.RenderPartial("_CmbProducto_CambioProducto", DataBinder.Eval(c.DataItem, "IdProductoCambio"));
                 ViewContext.Writer.Write("</div>");
             });
         });
-
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_cantidad";
+            column.FieldName = "CantidadFact";
+            column.Caption = "Cant. Fact.";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+            });
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "CantidadCambio";
             column.Caption = "cantidad";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
@@ -79,85 +101,8 @@
                 q.Width = Unit.Percentage(100);
             });
         });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_Precio";
-            column.Caption = "Precio";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(7);
-            column.EditorProperties().SpinEdit(q =>
-            {
-                q.MinValue = 0;
-                q.Width = Unit.Percentage(100);
-            });
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_PorDescUnitario";
-            column.Caption = "% Desc. uni.";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(q =>
-            {
-                q.MinValue = 0;
-                q.Width = Unit.Percentage(100);
-            });
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "IdCod_Impuesto_Iva";
-            column.Caption = "Impuesto";
-            column.Width = Unit.Percentage(60);
-            column.Visible = false;
-            column.EditorProperties().ComboBox(p =>
-            {
-                p.Columns.Add("nom_impuesto", "Descripción").Width = Unit.Percentage(100);
-                p.TextField = "nom_impuesto";
-                p.ValueField = "IdCod_Impuesto";
-                p.ValueType = typeof(string);
-                p.DataSource = ViewBag.lst_impuesto;
-            });
-            column.EditFormSettings.Visible = DefaultBoolean.True;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_PrecioFinal";
-            column.Caption = "Precio final";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_Subtotal";
-            column.Caption = "Subtotal";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_iva";
-            column.Caption = "I.V.A.";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "vt_total";
-            column.Caption = "Total";
-            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-            column.Width = Unit.Percentage(10);
-            column.EditFormSettings.Visible = DefaultBoolean.False;
-        });
-        settings.ClientSideEvents.BeginCallback = "e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();}";
 
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "vt_Subtotal").DisplayFormat = "{0:n2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "vt_iva").DisplayFormat = "{0:n2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "vt_total").DisplayFormat = "{0:n2}";
-        settings.Settings.ShowFooter = true;
+        settings.ClientSideEvents.BeginCallback = "function(s,e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();}";
     });
 }
 @grid.Bind(Model).GetHtml()
